--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
   <meta name="keywords" content="Cowin, Notifier, Automatic">
   <meta name="author" content="Prince Raj Roy">
   <meta name="viewport" content="width=1024">
+  <meta property="og:title" content="Cowin Notifier" />
+  <meta property="og:description" content="Get Notifications When Cowin Slots Become Available" />
+  <meta property="og:image" itemprop="image" content="https://cowin-notifier.netlify.app/logo.png" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
