--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <meta property="og:description" content="Get Notifications When Cowin Slots Become Available" />
   <meta property="og:image" itemprop="image" content="https://cowin-notifier.netlify.app/logo.png" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+  <link rel="icon" href="https://cowin-notifier.netlify.app/logo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
